Fixed Collumn labels being misaligned

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -20,16 +20,17 @@
   width: 30px;
   height: 100px;
   line-height: 100px;
+  text-align: center;
 }
 
 .board-column-label {
   width: 100px;
   height: 30px;
+  text-align: center;
 }
 
-.board-column-label p,
-.board-row-label p {
-  text-align: center;
+.board-column-label:nth-child(1) {
+  margin-left: 30px
 }
 
 .board-square-label {
